--- a/PlaceDocs/PlaceDocs.csproj
+++ b/PlaceDocs/PlaceDocs.csproj
@@ -70,6 +70,7 @@
     <None Include="Place21\Escola\Interrupcoesletivas.md" />
     <None Include="Place21\Escola\ofertaformativa.md" />
     <None Include="Place21\Escola\Recursosdaescola.md" />
+    <None Include="Place21\PlaceAluno\file1.md" />
     <None Include="PlaceMiudos\Alunos\Acaosocial.md" />
     <None Include="PlaceMiudos\Alunos\index.md" />
     <None Include="PlaceMiudos\Alunos\inscricoes.md" />
@@ -191,6 +192,7 @@
     <Content Include="images\Place21\Alunos\novocurso.PNG" />
     <Content Include="images\Place21\Alunos\ofertaformativa.PNG" />
     <Content Include="images\Place21\Alunos\place21.PNG" />
+    <Content Include="images\Place21\Alunos\placealuno.PNG" />
     <Content Include="images\Place21\Alunos\preescolar.PNG" />
     <Content Include="images\Place21\Alunos\preferencias.PNG" />
     <Content Include="images\Place21\Alunos\preinscriçoes.PNG" />
@@ -235,7 +237,10 @@
     <Content Include="Template\toc.html.js" />
     <Content Include="Template\UniversalReference.html.primary.js" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Place21\NewFolder2\" />
+    <Folder Include="Template\NewFolder1\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\docfx.console.2.32.0\build\docfx.console.targets" Condition="Exists('..\packages\docfx.console.2.32.0\build\docfx.console.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
