--- a/PlaceDocs/PlaceDocs.csproj
+++ b/PlaceDocs/PlaceDocs.csproj
@@ -70,7 +70,9 @@
     <None Include="Place21\Escola\Interrupcoesletivas.md" />
     <None Include="Place21\Escola\ofertaformativa.md" />
     <None Include="Place21\Escola\Recursosdaescola.md" />
-    <None Include="Place21\PlaceAluno\file1.md" />
+    <None Include="Place21\PlaceAluno\Placealuno.md" />
+    <None Include="PlaceAluno\index.md" />
+    <None Include="PlaceAluno\toc.md" />
     <None Include="PlaceMiudos\Alunos\Acaosocial.md" />
     <None Include="PlaceMiudos\Alunos\index.md" />
     <None Include="PlaceMiudos\Alunos\inscricoes.md" />
