--- a/PlaceDocs/PlaceDocs.csproj
+++ b/PlaceDocs/PlaceDocs.csproj
@@ -140,6 +140,7 @@
     <Content Include="images\global\logop21.png" />
     <Content Include="images\global\logopm.png" />
     <Content Include="images\Place21\Alunos\abrirpautas.PNG" />
+    <Content Include="images\Place21\Alunos\alteracaopase.PNG" />
     <Content Include="images\Place21\Alunos\alunoseturmas.PNG" />
     <Content Include="images\Place21\Alunos\ASE.PNG" />
     <Content Include="images\Place21\Alunos\asemiudos.PNG" />
@@ -149,6 +150,7 @@
     <Content Include="images\Place21\Alunos\cientificohumanistico.PNG" />
     <Content Include="images\Place21\Alunos\Clicarcomparar.PNG" />
     <Content Include="images\Place21\Alunos\Codigo.PNG" />
+    <Content Include="images\Place21\Alunos\codigorecuperacao.PNG" />
     <Content Include="images\Place21\Alunos\comparacao.PNG" />
     <Content Include="images\Place21\Alunos\compararcursos.PNG" />
     <Content Include="images\Place21\Alunos\consulta.PNG" />
@@ -167,6 +169,7 @@
     <Content Include="images\Place21\Alunos\desconsiderarfaltas.PNG" />
     <Content Include="images\Place21\Alunos\Diploma.PNG" />
     <Content Include="images\Place21\Alunos\disciplinas.PNG" />
+    <Content Include="images\Place21\Alunos\email.PNG" />
     <Content Include="images\Place21\Alunos\entrar.PNG" />
     <Content Include="images\Place21\Alunos\escola.PNG" />
     <Content Include="images\Place21\Alunos\escolas.PNG" />
@@ -200,15 +203,19 @@
     <Content Include="images\Place21\Alunos\preferencias.PNG" />
     <Content Include="images\Place21\Alunos\preinscriçoes.PNG" />
     <Content Include="images\Place21\Alunos\publicar.PNG" />
+    <Content Include="images\Place21\Alunos\recuperacao.PNG" />
+    <Content Include="images\Place21\Alunos\Recuperacaocodigo.png" />
     <Content Include="images\Place21\Alunos\renovacao.PNG" />
     <Content Include="images\Place21\Alunos\salas.PNG" />
     <Content Include="images\Place21\Alunos\scary_mask-512.png" />
     <Content Include="images\Place21\Alunos\sumarios.PNG" />
+    <Content Include="images\Place21\Alunos\tempsnip.png" />
     <Content Include="images\Place21\Alunos\tic.PNG" />
     <Content Include="images\Place21\Alunos\tipodecurso.PNG" />
     <Content Include="images\Place21\Alunos\tiposdecargos.PNG" />
     <Content Include="images\Place21\Alunos\titulares.PNG" />
     <Content Include="images\Place21\Alunos\Token.PNG" />
+    <Content Include="images\Place21\Alunos\validação.PNG" />
     <Content Include="images\Place21\Alunos\visualizarcurso.PNG" />
     <Content Include="images\PlaceMiudos\Alunos\cargos.PNG" />
     <Content Include="images\PlaceMiudos\Alunos\Horariosdocentes.PNG" />
