--- a/PlaceDocs/PlaceDocs.csproj
+++ b/PlaceDocs/PlaceDocs.csproj
@@ -201,6 +201,7 @@
     <Content Include="images\Place21\Alunos\placealuno.PNG" />
     <Content Include="images\Place21\Alunos\preescolar.PNG" />
     <Content Include="images\Place21\Alunos\preferencias.PNG" />
+    <Content Include="images\Place21\Alunos\preinscricoes2019.PNG" />
     <Content Include="images\Place21\Alunos\preinscriçoes.PNG" />
     <Content Include="images\Place21\Alunos\publicar.PNG" />
     <Content Include="images\Place21\Alunos\recuperacao.PNG" />
